Styling updates to resolve some contrast issues

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,7 +32,7 @@
   }
 
   @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: normal;
     font-display: optional;
     font-weight: 400;
@@ -40,7 +40,7 @@
   }
 
   @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     font-style: normal;
     font-display: optional;
     font-weight: 700;
